@@ -38,6 +38,10 @@ AC_DEFINE_UNQUOTED(EVOLUTION_BASE_VERSION,"$EVOLUTION_BASE_VERSION",Evolution ve
 BASE_VERSION=$EVOLUTION_API_VERSION
 AC_DEFINE_UNQUOTED(BASE_VERSION, "$BASE_VERSION", Connector base version)
 AC_SUBST(BASE_VERSION)
+
+API_VERSION=$EDS_API_VERSION
+AC_DEFINE_UNQUOTED(API_VERSION, "$API_VERSION", Eds api version)
+AC_SUBST(API_VERSION)
 AC_SUBST(EDS_BASE_VERSION)
 
 dnl Initialize maintainer mode
