@@ -38,7 +38,7 @@
 -->
 </oaf_server>
 
-<oaf_server iid="OAFIID:GNOME_Evolution_Exchange_Connector_BookFactory:@BASE_VERSION@"
+<oaf_server iid="OAFIID:GNOME_Evolution_Exchange_Connector_BookFactory:@API_VERSION@"
             type="exe"
             location="@CONNECTOR_PATH@/evolution-exchange-storage">
 
@@ -56,7 +56,7 @@
         </oaf_attribute>
 </oaf_server>
 
-<oaf_server iid="OAFIID:GNOME_Evolution_Exchange_Connector_CalFactory:@BASE_VERSION@"
+<oaf_server iid="OAFIID:GNOME_Evolution_Exchange_Connector_CalFactory:@API_VERSION@"
             type="exe"
             location="@CONNECTOR_PATH@/evolution-exchange-storage">
 
